# git-z

./: .editorconfig  .envrc  .gitignore  .gitsetup  .jjsetup  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  askama.toml  build-deb.sh  build.rs  clippy.toml  committed.toml  flake.nix  git-z.sample  git-z.toml  git-z.toml.sample  taplo.toml  yamlfmt.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: command.rs  commit_cache.rs  config.rs  helpers.rs  lib.rs  main.rs  tracing.rs
src/command/: commit.rs  hello.rs  helpers.rs  init.rs  update.rs
src/command/commit/: backend.rs
src/config/: updater.rs  v0_1.rs  v0_2.rs  v0_2_dev_0.rs  v0_2_dev_1.rs  v0_2_dev_2.rs  v0_2_dev_3.rs
src/config/updater/: common.rs  from_v0_1.rs  from_v0_2_dev_0.rs  from_v0_2_dev_1.rs  from_v0_2_dev_2.rs  from_v0_2_dev_3.rs
templates/: COMMIT_EDITMSG  git-z.toml.jinja
tests/: commit.rs
tests/fake_bin/: git
tests/res/config/: invalid_config.not_toml  invalid_development.toml  invalid_no-version.toml  invalid_version.toml  latest_full.toml  latest_minimal.toml  latest_scopes-list.toml  latest_template-dummy.toml  latest_template-invalid.toml  latest_template-unknown-variable.toml  latest_ticket-optional.toml  latest_ticket-required.toml  latest_types-custom.toml  v0_1_doc-and-user-comments.toml  v0_1_standard.toml  v0_1_user-comments.toml  v0_2_doc-and-user-comments.toml  v0_2_keep-empty-prefix.toml  v0_2_scopes-any.toml  v0_2_standard.toml  v0_2_ticket-not-asked-for.toml  v0_2_ticket-not-required.toml  v0_2_user-comments.toml
wix/: main.wxs
xtask/: Cargo.toml
xtask/src/: main.rs
