[package]
name = "git-z"
version = "0.2.0-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"
homepage = "https://github.com/ejpcmac/git-z"
keywords = ["conventional-commits", "git"]
license = "GPL-3.0-only"
repository = "https://github.com/ejpcmac/git-z"
resolver = "2"
description = "A Git extension to go beyond."

exclude = [
    "/.*",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/build-deb.sh",
    "/flake.*",
    "/git-z.toml",
    "/rust-toolchain.toml",
    "/rustfmt.toml",
    "/wix/",
]

[dependencies]
askama = "0.12"
clap = { version = "4", features = ["derive", "wrap_help"] }
color-eyre = "0.6"
colored = "2"
eyre = "0.6"
indexmap = { version = "2", features = ["serde"] }
inquire = "0.6"
regex = "1"
serde = { version = "1", features = ["derive"] }
tera = "1"
thiserror = "1"
toml = "0.8"
toml_edit = "0.21"

[lints.rust]
# Forbidden
unsafe_code = "forbid"

# Denied
missing_docs = "deny"
unused_must_use = "deny"

# Warnings
rust_2018_idioms = "warn"

[lints.clippy]
redundant_pub_crate = "warn"
unwrap_used = "warn"
use_self = "warn"

[package.metadata.deb]
depends = "git"

[package.metadata.wix]
license = "wix/gpl-3.0.rtf"
